@@ -10,7 +10,7 @@ SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="
 calculate_nodecoration
 calculate_nographics
@@ -148,11 +148,11 @@ RDEPEND="${RDEPEND}
 #-----------------------------------------------------------------------------
 # kdenetwork-meta
 #-----------------------------------------------------------------------------
+#kde-base/kget
 RDEPEND="${RDEPEND}
 	!calculate_nonettools? (
 		kde-base/kdenetwork-filesharing
 		kde-base/kdnssd
-		kde-base/kget
 		kde-base/kopete
 		kde-base/krdc
 		kde-base/krfb
@@ -198,8 +198,6 @@ RDEPEND="${RDEPEND}
 #kde-base/ktimetracker
 RDEPEND="${RDEPEND}
 	!calculate_nonetwork? (
-		!kde-base/kdepim-l10n
-		kde-base/akonadiconsole
 		kde-base/akregator
 		kde-base/kabcclient
 		kde-base/kaddressbook
@@ -215,6 +213,10 @@ RDEPEND="${RDEPEND}
 		kde-base/konsolekalendar
 		kde-base/kontact
 		kde-base/korganizer
+		kde-base/libkdepim
+		kde-base/libkleo
+		kde-base/libkpgp
+		kde-base/akonadi
 	)
 "
 
@@ -223,6 +225,7 @@ RDEPEND="${RDEPEND}
 #-----------------------------------------------------------------------------
 RDEPEND="${RDEPEND}
 	kde-base/kde-l10n
+	!kde-base/kdepim-l10n
 "
 
 #-----------------------------------------------------------------------------
