@@ -10,13 +10,14 @@ SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 x86"
+KEYWORDS="~amd64 ~x86"
 IUSE="
 calculate_nodecoration
 calculate_nographics
 calculate_nomultimedia
 calculate_nonettools
 calculate_nonetwork
+cups ffmpeg mplayer ppp scanner semantic-desktop
 "
 
 #-----------------------------------------------------------------------------
@@ -27,7 +28,9 @@ RDEPEND="${RDEPEND}
 	kde-base/kcron
 	kde-base/ksystemlog
 	kde-base/kuser
-	kde-base/system-config-printer-kde
+	cups? (
+		kde-base/system-config-printer-kde
+	)
 "
 #-----------------------------------------------------------------------------
 # kdeartwork-meta
@@ -48,17 +51,17 @@ RDEPEND="${RDEPEND}
 #-----------------------------------------------------------------------------
 # kdebase-meta
 #-----------------------------------------------------------------------------
-#kde-base/nsplugins
+#kde-base/konq-plugins
 RDEPEND="${RDEPEND}
 	!<kde-base/kdebase-wallpapers-4.6.0
 	kde-base/dolphin
 	kde-base/freespacenotifier
 	kde-base/kcheckpass
 	kde-base/kcminit
+	kde-base/kde-wallpapers
 	kde-base/kdebase-cursors
 	kde-base/kdebase-runtime-meta
 	kde-base/kdebase-startkde
-	kde-base/kdebase-wallpapers
 	kde-base/kdepasswd
 	kde-base/kdialog
 	kde-base/keditbookmarks
@@ -123,8 +126,10 @@ RDEPEND="${RDEPEND}
 		kde-base/okular
 		kde-base/svgpart
 		kde-base/thumbnailers
-		kde-base/ksaneplugin
-		kde-base/libksane
+		scanner? (
+			kde-base/ksaneplugin
+			kde-base/libksane
+		)
 	)
 "
 
@@ -140,23 +145,29 @@ RDEPEND="${RDEPEND}
 		kde-base/kscd
 		kde-base/libkcddb
 		kde-base/libkcompactdisc
-		kde-base/mplayerthumbs
-		kde-base/ffmpegthumbs
+		mplayer? (
+			kde-base/mplayerthumbs
+		)
+		ffmpeg? (
+			kde-base/ffmpegthumbs
+		)
 	)
 "
 
 #-----------------------------------------------------------------------------
 # kdenetwork-meta
 #-----------------------------------------------------------------------------
+#kde-base/kget
 RDEPEND="${RDEPEND}
 	!calculate_nonettools? (
 		kde-base/kdenetwork-filesharing
 		kde-base/kdnssd
-		kde-base/kget
 		kde-base/kopete
 		kde-base/krdc
 		kde-base/krfb
-		kde-base/kppp
+		ppp? (
+			kde-base/kppp
+		)
 	)
 "
 #-----------------------------------------------------------------------------
@@ -173,7 +184,6 @@ RDEPEND="${RDEPEND}
 # kdeutils-meta
 #-----------------------------------------------------------------------------
 #kde-base/ktimer
-#kde-base/okteta
 #kde-base/superkaramba
 #kde-base/kfloppy
 RDEPEND="${RDEPEND}
@@ -186,7 +196,9 @@ RDEPEND="${RDEPEND}
 	kde-base/kremotecontrol
 	kde-base/kwallet
 	kde-base/sweeper
-	kde-base/printer-applet
+	cups? (
+		kde-base/printer-applet
+	)
 "
 
 #-----------------------------------------------------------------------------
@@ -198,25 +210,24 @@ RDEPEND="${RDEPEND}
 #kde-base/ktimetracker
 RDEPEND="${RDEPEND}
 	!calculate_nonetwork? (
-		kde-base/akregator
-		kde-base/kabcclient
-		kde-base/kaddressbook
-		kde-base/kalarm
-		kde-base/kdepim-icons
-		kde-base/kdepim-kresources
-		kde-base/kdepim-runtime
-		kde-base/kdepim-strigi-analyzer
-		kde-base/kjots
-		kde-base/kleopatra
-		kde-base/kmail
-		kde-base/knotes
-		kde-base/konsolekalendar
-		kde-base/kontact
-		kde-base/korganizer
-		kde-base/libkdepim
-		kde-base/libkleo
-		kde-base/libkpgp
-		kde-base/akonadi
+		semantic-desktop? (
+			kde-base/akonadiconsole
+			kde-base/akregator
+			kde-base/kabcclient
+			kde-base/kaddressbook
+			kde-base/kalarm
+			kde-base/kdepim-icons
+			kde-base/kdepim-kresources
+			kde-base/kdepim-runtime
+			kde-base/kdepim-strigi-analyzer
+			kde-base/kjots
+			kde-base/kleopatra
+			kde-base/kmail
+			kde-base/knotes
+			kde-base/konsolekalendar
+			kde-base/kontact
+			kde-base/korganizer
+		)
 	)
 "
 
@@ -225,7 +236,7 @@ RDEPEND="${RDEPEND}
 #-----------------------------------------------------------------------------
 RDEPEND="${RDEPEND}
 	kde-base/kde-l10n
-	!kde-base/kdepim-l10n
+	kde-base/kdepim-l10n
 "
 
 #-----------------------------------------------------------------------------
