@@ -30,6 +30,7 @@ RDEPEND="
 		net-im/choqok
 		net-irc/konversation
 		net-p2p/eiskaltdcpp
+		net-p2p/ktorrent
 	)
 	cdistro_CLDG? (
 		net-ftp/filezilla
