@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-nettools-meta-11.6-r3 (23 Aug 2011)
+
+  23 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-nettools-meta-11.6-r2.ebuild, +cl-nettools-meta-11.6-r3.ebuild:
+  Changed assignment package cl-network-mate and cl-nettools-meta.
+
 *cl-nettools-meta-11.6-r2 (28 Jun 2011)
 
   28 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
