@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-kde-meta-4.7.0-r2 (23 Aug 2011)
+
+  23 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-kde-meta-4.7.0-r1.ebuild, +cl-kde-meta-4.7.0-r2.ebuild:
+  remove kget
+
 *cl-kde-meta-4.7.0-r1 (15 Aug 2011)
 
   15 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
